# cmake-workshop

./: .buildinfo  README.md  environment.yml  index.html  objects.inv  requirements.txt  searchindex.js
.github/workflows/: test.yml
_sources/: dependencies.rst.txt  fetch-content.rst.txt  flags-definitions-debugging.rst.txt  growing-projects.rst.txt  index.rst.txt  motivation.rst.txt  setup.rst.txt  tour.rst.txt
content/: cmake-syntax.rst  conf.py  conventions.rst  credits.rst  dependencies.rst  environment.rst  fetch-content.rst  flags-definitions-debugging.rst  growing-projects.rst  guide.rst  hello-cmake.rst  hello-ctest.rst  index.rst  motivation.rst  quick-tour.rst  resources.rst  setup.rst  targets.rst  testing.rst  tour.rst
content/examples/bad-example-using-variables/: CMakeLists.txt
content/examples/calculator/: CMakeLists.txt
content/examples/calculator/src/: CMakeLists.txt  git-version.cmake  version-template.h
content/examples/calculator/test/: CMakeLists.txt
content/examples/multiple-folders/problem/fortran/: CMakeLists.txt
content/examples/multiple-folders/solution/cxx/: CMakeLists.txt
content/examples/multiple-folders/solution/cxx/src/evolution/: CMakeLists.txt
content/examples/multiple-folders/solution/cxx/src/io/: CMakeLists.txt
content/examples/multiple-folders/solution/fortran/src/evolution/: CMakeLists.txt
content/examples/property-visibility/hello_world/: hello_world.hpp
content/examples/testing/: CMakeLists.txt
content/examples/testing-parallel/: CMakeLists.txt
content/exercises/: LICENSE
content/exercises/bad-example-using-variables/: CMakeLists.txt  main.cpp
content/exercises/bad-example-using-variables/greeting/: greeting.cpp
content/exercises/bad-example-using-variables/hello_world/: hello_world.cpp
content/exercises/fetch-content/: CMakeLists.txt
content/exercises/hello-library/fortran/: hello.f90
content/exercises/multiple-folders/problem/cxx/: CMakeLists.txt
content/exercises/multiple-folders/solution/cxx/src/initial/: CMakeLists.txt
content/exercises/multiple-folders/solution/cxx/src/parser/: CMakeLists.txt
content/exercises/multiple-folders/solution/fortran/: CMakeLists.txt
content/exercises/property-visibility/cxx/: CMakeLists.txt
content/exercises/property-visibility/cxx/greeting/: greeting.hpp
content/exercises/property-visibility/cxx/world/: world.cpp  world.hpp
credits/: index.html
dependencies/: index.html
environment/: index.html
fetch-content/: index.html
flags-definitions-debugging/: index.html
genindex/: index.html
growing-projects/: index.html
hello-cmake/: index.html
motivation/: index.html
resources/: index.html
search/: index.html
setup/: index.html
targets/: index.html
testing/: index.html
tour/: index.html
